src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AdminURL__c</fullName>
        <label>AdminURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertsEmail__c</fullName>
        <label>AlertsEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlertsPhone__c</fullName>
        <label>AlertsPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoTopup__c</fullName>
        <label>AutoTopup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <label>Blocked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysSinceLenderRegistration__c</fullName>
        <label>DaysSinceLenderRegistration</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceRegistration__c</fullName>
        <label>DaysSinceRegistration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <label>Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectDebit__c</fullName>
        <label>DirectDebit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoB_match__c</fullName>
        <label>DoB_match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electoral_roll_match__c</fullName>
        <label>Electoral_roll_match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAsText__c</fullName>
        <label>EmailAsText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FeesUnpaid__c</fullName>
        <label>FeesUnpaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstFunding__c</fullName>
        <label>FirstFunding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstWithdrawal__c</fullName>
        <label>FirstWithdrawal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <label>HouseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_match__c</fullName>
        <label>Insight_match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestFunding__c</fullName>
        <label>LatestFunding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestLogin__c</fullName>
        <label>LatestLogin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LatestWithdrawal__c</fullName>
        <label>LatestWithdrawal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LenderRegDate__c</fullName>
        <label>LenderRegDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LentOut__c</fullName>
        <label>LentOut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoginsLast90__c</fullName>
        <label>LoginsLast90</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxLending__c</fullName>
        <label>MaxLending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <externalId>true</externalId>
        <label>MemberID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NeverContact__c</fullName>
        <label>NeverContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewDevPhone__c</fullName>
        <label>NewDevPhone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewsletterEmail__c</fullName>
        <label>NewsletterEmail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotOffered__c</fullName>
        <label>NotOffered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OnOffer__c</fullName>
        <label>OnOffer</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PhonePreference__c</fullName>
        <label>PhonePreference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_match__c</fullName>
        <label>Phone_match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reception__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegDate__c</fullName>
        <description>Date of registration</description>
        <label>RegDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegState__c</fullName>
        <label>RegState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <label>Suspended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalFundedLast30__c</fullName>
        <label>TotalFundedLast30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFundedLast365__c</fullName>
        <label>TotalFundedLast365</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFundedLast90__c</fullName>
        <label>TotalFundedLast90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFunded__c</fullName>
        <label>TotalFunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWithdrawnLast30__c</fullName>
        <label>TotalWithdrawnLast30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWithdrawnLast365__c</fullName>
        <label>TotalWithdrawnLast365</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWithdrawnLast90__c</fullName>
        <label>TotalWithdrawnLast90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalWithdrawn__c</fullName>
        <label>TotalWithdrawn</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>